finished cmake build in windows

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -4,8 +4,10 @@
 #define FFMPEG_LICENSE @FFMPEG_LICENSE@
 #define FFMPEG_CONFIGURATION @FFMPEG_CONFIGURATION@
 #define FFMPEG_DATADIR @FFMPEG_DATADIR@
+#define AVCONV_DATADIR @AVCONV_DATADIR@
 #define CC_IDENT @CC_IDENT@
 #define av_restrict @av_restrict@
+#define SWS_MAX_FILTER_SIZE @SWS_MAX_FILTER_SIZE@
 
 #define ARCH_X86 @ARCH_X86@
 #define ARCH_X86_32 @ARCH_X86_32@
@@ -24,6 +26,7 @@
 #define CONFIG_GRAY @CONFIG_GRAY@
 #define CONFIG_FRAME_THREAD_ENCODER @CONFIG_FRAME_THREAD_ENCODER@
 #define CONFIG_ZLIB @CONFIG_ZLIB@
+#define CONFIG_SWSCALE_ALPHA @CONFIG_SWSCALE_ALPHA@
 
 #define HAVE_ISNAN @HAVE_ISNAN@
 #define HAVE_ISFINITE @HAVE_ISFINITE@
@@ -36,6 +39,16 @@
 #define HAVE_PRAGMA_DEPRECATED @HAVE_PRAGMA_DEPRECATED@
 #define HAVE_FAST_CLZ @HAVE_FAST_CLZ@
 #define HAVE_DOS_PATHS @HAVE_DOS_PATHS@
+#define HAVE_ALTIVEC @HAVE_ALTIVEC@
+#define HAVE_LSX @HAVE_LSX@
+#define HAVE_MMX_INLINE @HAVE_MMX_INLINE@
+#define HAVE_NEON @HAVE_NEON@
+#define HAVE_MMXEXT_INLINE @HAVE_MMXEXT_INLINE@
+#define HAVE_MMX @HAVE_MMX@
+#define HAVE_MMXEXT_INLINE @HAVE_MMXEXT_INLINE@
+#define HAVE_LASX @HAVE_LASX@
+#define HAVE_BIGENDIAN @HAVE_BIGENDIAN@
+#define HAVE_FAST_64BIT @HAVE_FAST_64BIT@
 
 
 #endif
